tests/ui/const-generics/lookup-method.stderr
error[E0599]: no method named `build` found for struct `Builder<const { false }, const { true }>` in the current scope
  --> $DIR/lookup-method.rs:17:14
   |
LL | struct Builder<const A: bool, const B: bool>;
   | -------------------------------------------- method `build` not found for this struct
...
LL |     b.cast().build();
   |              ^^^^^ method not found in `Builder<const { false }, const { true }>`
   |
   = note: the method was found for
           - `Builder<const { true }, const { true }>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
